<resources>
    <string name="app_name">HttpTools</string>

    <string name="menu_clear">清屏</string>
    <string name="menu_export">导出</string>
    <string name="menu_setting">设置</string>

    <string name="url">url</string>
    <string name="var">VAR</string>
    <string name="clear">重置</string>
    <string name="params_name">params_name</string>
    <string name="params_value">params_value</string>
    <string name="params_text">文本</string>
    <string name="params_file">文件</string>
    <string name="add">添加</string>
    <string name="post">POST</string>
    <string name="get">GET</string>
    <string name="del">DEL</string>
    <string name="put">PUT</string>
    <string name="patch">PATCH</string>
</resources>
