<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="http.ayschttp.MainActivity">
    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/icon_clear"
        android:orderInCategory="100"
        android:title="@string/menu_clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/icon_export"
        android:orderInCategory="100"
        android:title="@string/menu_export"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/icon_setting"
        android:orderInCategory="100"
        android:title="@string/menu_setting"
        app:showAsAction="always" />
</menu>
